# rechess

./: README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json
client/public/: index.html
client/src/: App.svelte  app.css
client/src/components/: Button.svelte  ChessBoard.svelte  NavBar.svelte
client/src/container/: Signup.svelte
client/src/lib/: Counter.svelte
client/src/routes/: Home.svelte  Play.svelte  [room_id].svelte  __error.svelte  __layout.svelte  index.svelte  login.svelte  (+1 more)
nginx/: nginx.conf
server/: Cargo.toml  Dockerfile
server/migrations/: 20210818161832_create-tables.sql  create_tables.sql
server/src/: config.rs  main.rs  server.rs
server/src/actors/: mod.rs
server/src/actors/room/: mod.rs  model.rs
server/src/actors/room_manager/: mod.rs  model.rs
server/src/actors/websocket/: mod.rs  model.rs
server/src/app/: mod.rs
server/src/app/auth/: handlers.rs  mod.rs
server/src/app/rooms/: handlers.rs  mod.rs  model.rs
server/src/app/ws/: handlers.rs  mod.rs
server/src/auth/: model.rs
server/src/chess_server/: handlers.rs  mod.rs  model.rs  server.rs  ws.rs
server/src/config/: mod.rs
server/src/redis/: mod.rs
server/src/room/: mod.rs
server/src/room_manager/: mod.rs
server/src/room_manager_ng/: mod.rs
server/src/users/: crypto.rs  handlers.rs  mod.rs  model.rs
server/src/util/: chess.rs  mod.rs  redis.rs
server/src/websocket/: handlers.rs  mod.rs  model.rs
server/static/: websocket.html
(+15 files in other folders)
