[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4.14"
env_logger = "0.9.0"
chess = "3.2.0"
rand = "0.8.4"
bytes = "1.0.1"
byteorder = "1.3"
futures = "0.3"