[package]
name = "rechess-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
actix-cors = "0.6.0-beta.2"
actix-redis = "0.10.0-beta.2"
redis-async = { version = "0.8", default-features = false, features = ["tokio10"] }
actix-files = "0.5.0"
actix-session = "0.5.0-beta.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4.14"
env_logger = "0.9.0"
chess = "3.2.0"
rand = "0.8.4"
bytes = "1.0.1"
byteorder = "1.3"
futures = "0.3"
dotenv = "0.15.0"
envy = "0.4"
eyre = "0.6"
color-eyre = "0.5"
sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.14"
validator_derive = "0.14"
jsonwebtoken = "7.2"
argon2 = "0.2.3"
rand_core = { version = "0.6", features = ["std"] }
indexmap = "1.7.0"